# plexinstaller

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  _redirects  addon_manager.py  archive_search_log.txt  backup_manager.py  beta.sh  build.js  config.py  faq.html  guide.html  health_checker.py  index.html  install.sh  installer.py  main.js  mongodb_manager.py  package.json  plex_cli.py  privacy.html  pyproject.toml  release-key.gpg  release.sh  release_windows.py  requirements.txt  robots.txt  shared.py  start.js  telemetry_client.py  terms.html  utils.py  version.json  version.json.sig  web.js  worker.js
.github/: copilot-instructions.md
.github/workflows/: apt-repo-build.yml  apt-repo.yml  ci.yml
.well-known/: security.txt
debian/: build-deb.sh  control  postinst  prerm
guide/: index.html
linux/: backup_manager.py  config.py  utils.py
telemetry/: README.md  server.py
tests/: test_addon_manager.py  test_addon_manager_coverage.py  test_backup_manager.py  test_backup_manager_coverage.py  test_config.py  test_config_coverage.py  test_health_checker.py  test_health_checker_coverage.py  test_installer_coverage.py  test_installer_coverage_menus.py  test_installer_gaps.py  test_installer_lifecycle.py  test_misc_gaps.py  test_mongodb_manager.py  test_mongodb_manager_coverage.py  test_plex_cli.py  test_plex_cli_coverage.py  test_plex_cli_lifecycle.py  test_release_metadata.py  test_release_workflow.py  test_setup_script.py  test_shared.py  test_shared_coverage.py  test_telemetry.py  test_telemetry_server.py  test_telemetry_server_coverage.py  test_utils.py  test_utils_coverage.py  test_utils_gaps.py  test_windows_lifecycle.py
web/: guide.html  index.html  main.js  privacy.html  setup.sh  web.js
web2/: changelog.html  eslint.config.js  faq.html  guide.html  index.html  package-lock.json  package.json  privacy.html  terms.html  tsconfig.node.json  vite.config.ts
web2/public/: ads.txt  robots.txt  setup.sh  sitemap.xml
web2/src/: App.tsx  main.tsx  styles.css
web2/src/components/: CommandBlock.tsx  ProductGrid.tsx  ReleaseTimeline.tsx  SiteNav.tsx  SsoGrid.tsx  icons.tsx
web2/src/data/: changelog.ts  docs.ts  installers.ts  products.ts  sso.ts
web2/src/pages/: FaqPage.tsx  GuidePage.tsx  PrivacyPage.tsx  TermsPage.tsx  changelog.tsx  faq.tsx  guide.tsx  privacy.tsx  terms.tsx
web2/src/sections/: DocsLayout.tsx
