[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexinstaller"
version = "3.3.0"
description = "Unofficial CLI installer and management tool for PlexDevelopment products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "PyYAML>=6.0,<7",
    "colorama>=0.4.6,<1",
]

[project.scripts]
plexinstaller = "installer:main"
plex = "plex_cli:main"

[project.optional-dependencies]
telemetry-server = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic>=2,<3",
]
dev = [
    "pytest>=7.4,<10",
    "pytest-cov>=4.1,<8",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-colorama>=0.4.15",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31",
]

[tool.setuptools]
py-modules = [
    "installer",
    "plex_cli",
    "config",
    "utils",
    "shared",
    "telemetry_client",
    "addon_manager",
    "health_checker",
    "mongodb_manager",
    "backup_manager",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
exclude = ["build/", "dist/", "web2/"]

[[tool.mypy.overrides]]
module = "telemetry.server"
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
