[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexinstaller"
version = "3.2.1"
description = "Experimental Windows installer and management CLI for PlexDevelopment products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "PyYAML>=6.0,<7",
    "colorama>=0.4.6,<1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
plexinstaller = "installer:main"
plex = "plex_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<10",
    "pytest-cov>=4.1,<8",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-colorama>=0.4.15",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31",
]

[tool.setuptools]
py-modules = [
    "installer",
    "plex_cli",
    "config",
    "utils",
    "shared",
    "telemetry_client",
    "addon_manager",
    "health_checker",
    "mongodb_manager",
    "backup_manager",
    "release_windows",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "web2",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    "(?x)(^|/)(?:build|dist|web2|\\.mypy_cache|\\.pytest_cache|\\.ruff_cache|\\.venv)/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = [
    "addon_manager",
    "backup_manager",
    "config",
    "health_checker",
    "installer",
    "mongodb_manager",
    "plex_cli",
    "shared",
    "telemetry_client",
    "utils",
]
omit = [
    "tests/*",
    "*/tests/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == ['\"]__main__['\"]:",
]
